<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Textedit</string>
    <string name="action_Catalog">Catalog</string>
    <string name="title_section1">NewText1</string>
    <string name="title_section2">NewText2</string>
    <string name="title_section3">NewText3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_add">Add</string>
    <string name="action_remove">Delete</string>
    <string name="action_rename">Rename</string>
    <string name="action_save">Save</string>
    <string name="action_clear">Clear</string>
    <string name="action_edit">Edit</string>
    <string name="action_preview">preview</string>
    <string name="action_capture">Capture</string>
    <string name="action_share">Share</string>
    <string name="action_settings">Settings</string>
    
    
    <string name="dialog_input_name">Please input name:</string>
    <string name="dialog_add">Add</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ignore">Ignore</string>
    
    <string name="dialog_delete_text">Delete text:</string>
    <string name="dialog_if_delete">Ready to delete?</string>
    <string name="dialog_delete">Delete</string>
    
    <string name="dialog_rename_text">Please modify name:</string>
    <string name="dialog_modify">Modify</string>
    
    <string name="dialog_clear_text">Clear text:</string>
    <string name="dialog_if_clear">Ready to clear?</string>
    <string name="dialog_clear">Clear</string>
    
</resources>
