<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/top"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content">
	<!-- android:orientation="vertical" -->
		
		<LinearLayout android:id="@+id/bottom"
			android:background="#efefef"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:showDividers="beginning"
			android:layout_alignParentBottom="true">
		    <Button android:id="@+id/edit"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="1dip"
				android:text="@string/action_edit"
				android:layout_weight="1"
				style="?android:attr/buttonBarButtonStyle"/>
			<Button android:id="@+id/capture"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="1dip"
				android:text="@string/action_capture"
				android:layout_weight="1"
				style="?android:attr/buttonBarButtonStyle"/>
			<Button android:id="@+id/share"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="1dip"
				android:text="@string/action_share"
				android:layout_weight="1"
				style="?android:attr/buttonBarButtonStyle"/>
			<Button android:id="@+id/setting"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="1dip"
				android:text="@string/action_settings"
				android:layout_weight="1"
				style="?android:attr/buttonBarButtonStyle"/>
		</LinearLayout>
		
		<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
		<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    xmlns:tools="http://schemas.android.com/tools"
		    android:id="@+id/drawer_layout"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:layout_above="@id/bottom"
		    tools:context="com.seven.textedit.MainActivity" >
		
		    <!--
		         As the main content view, the view below consumes the entire
		         space available using match_parent in both dimensions.
		    -->
	
		    <FrameLayout
		        android:id="@+id/container"
		        android:layout_width="match_parent"
		        android:layout_height="match_parent" />
	
		    <!--
		         android:layout_gravity="start" tells DrawerLayout to treat
		         this as a sliding drawer on the left side for left-to-right
		         languages and on the right side for right-to-left languages.
		         If you're not building against API 17 or higher, use
		         android:layout_gravity="left" instead.
		    -->
		    <!--
		         The drawer is given a fixed width in dp and extends the full height of
		         the container.
		    -->
	
		    <fragment
		        android:id="@+id/navigation_drawer"
		        android:name="com.seven.textedit.NavigationDrawerFragment"
		        android:layout_width="@dimen/navigation_drawer_width"
		        android:layout_height="match_parent"
		        android:layout_gravity="start"
		        tools:layout="@layout/fragment_navigation_drawer" />
	
		</android.support.v4.widget.DrawerLayout>
		
</RelativeLayout>